--- a/app/src/main/res/layout/network_fragment.xml
+++ b/app/src/main/res/layout/network_fragment.xml
@@ -2,7 +2,7 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:id="@+id/fragment_container"
               android:background="@drawable/rounded_fragment"
-              android:backgroundTint="@color/green"
+              android:backgroundTint="@color/orange"
               android:clipToPadding="true"
               android:layout_width="match_parent"
               android:layout_height="match_parent">
