Add default UI content to fragments

--- a/app/src/main/res/layout/main_layout.xml
+++ b/app/src/main/res/layout/main_layout.xml
@@ -19,7 +19,7 @@
 
     <FrameLayout
             android:layout_width="match_parent"
-            android:layout_height="80dp"
+            android:layout_height="wrap_content"
             android:layout_margin="20dp"
             android:id="@+id/warning_fragment_container">
     <!-- FrameLayout layout_height will be wrap_content when we have content -->
@@ -27,7 +27,7 @@
 
     <FrameLayout
             android:layout_width="match_parent"
-            android:layout_height="80dp"
+            android:layout_height="wrap_content"
             android:layout_margin="20dp"
             android:id="@+id/network_fragment_container">
         <!-- FrameLayout layout_height will be wrap_content when we have content -->
