--- a/app/src/main/res/layout/network_fragment.xml
+++ b/app/src/main/res/layout/network_fragment.xml
@@ -1,10 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:id="@+id/fragment_container"
+             xmlns:app="http://schemas.android.com/apk/res-auto" android:id="@+id/fragment_container"
               android:background="@drawable/rounded_fragment"
               android:backgroundTint="@color/orange"
               android:clipToPadding="true"
               android:layout_width="match_parent"
-              android:layout_height="match_parent">
+              android:layout_height="70dp">
 
+    <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+        <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+            <!-- Add network icon here -->
+            <TextView
+                    android:id="@+id/networkTitle"
+                    android:text="@string/network_status"
+                    android:textColor="@color/white"
+                    style="@android:style/TextAppearance.Large"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:gravity="center_vertical"
+                    android:layout_weight="1"/>
+            <!-- Add dropdown icon here -->
+        </LinearLayout>
+    </LinearLayout>
 </FrameLayout>
