--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,6 +4,7 @@
     <color name="colorPrimaryDark">#7fc89b</color>
     <color name="colorAccent">#FF4081</color>
 
+    <color name="white">#fff</color>
     <color name="green">#7fc89b</color>
     <color name="yellow">#FFE552</color>
     <color name="orange">#E8973F</color>
