--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#7fc89b</color>
-    <color name="colorPrimaryDark">#7fc89b</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">@color/green</color>
+    <color name="colorPrimaryDark">@color/green</color>
+    <color name="colorAccent">@color/yellow</color>
 
     <color name="white">#fff</color>
     <color name="green">#7fc89b</color>
