--- a/app/src/main/res/layout/network_fragment.xml
+++ b/app/src/main/res/layout/network_fragment.xml
@@ -5,18 +5,19 @@
               android:backgroundTint="@color/green"
               android:clipToPadding="true"
               android:layout_width="match_parent"
-              android:layout_height="70dp">
+              android:layout_height="wrap_content">
 
     <LinearLayout
             android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="wrap_content">
 
+        <!-- Network Title -->
         <LinearLayout
                 android:id="@+id/network_title_layout"
                 android:orientation="horizontal"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="70dp">
 
             <!-- Network Status Icon -->
             <ImageView
@@ -52,7 +53,7 @@
                     android:layout_weight="0.18"/>
 
             <!-- Chevron Up Icon -->
-            <!-- Default visibility: Gone -->
+            <!-- Default Visibility: Gone -->
             <ImageView
                     android:id="@+id/chevron_up_icon"
                     android:layout_width="0dp"
@@ -64,6 +65,21 @@
                     app:srcCompat="@drawable/ic_chevron_up"
                     android:layout_weight="0.18"/>
 
+        </LinearLayout>
+
+        <!-- Network Content -->
+        <!-- Default Visibility: Gone -->
+        <LinearLayout
+                android:id="@+id/network_content_layout"
+                android:orientation="vertical"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:visibility="gone">
+
+            <TextView
+                    android:text="@string/app_name"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" android:id="@+id/textView"/>
         </LinearLayout>
     </LinearLayout>
 </FrameLayout>
