--- a/app/src/main/res/layout/network_fragment.xml
+++ b/app/src/main/res/layout/network_fragment.xml
@@ -74,12 +74,122 @@
                 android:orientation="vertical"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:layout_marginStart="60dp"
                 android:visibility="gone">
 
-            <TextView
-                    android:text="@string/app_name"
+            <!-- Cellular Signal -->
+            <LinearLayout
+                    android:orientation="horizontal"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content" android:id="@+id/textView"/>
+                    android:layout_height="match_parent"
+                    android:layout_marginBottom="10dp">
+
+                <!-- Good Signal Icon -->
+                <ImageView
+                        android:id="@+id/good_cellular_signal_icon"
+                        android:tint="@color/white"
+                        android:layout_width="50dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginEnd="10dp"
+                        app:srcCompat="@drawable/ic_network_cell"
+                        android:layout_weight="1"/>
+
+                <!-- Signal Status Text -->
+                <TextView
+                        android:id="@+id/good_cellular_signal_text"
+                        android:text="@string/cellular_status"
+                        style="@android:style/TextAppearance.Medium"
+                        android:textColor="@color/white"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:gravity="center_vertical"
+                        android:layout_gravity="center_vertical"
+                        android:layout_weight="1"/>
+
+            </LinearLayout>
+
+            <!-- GPS Signal -->
+            <LinearLayout
+                    android:orientation="horizontal"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginBottom="10dp">
+
+                <!-- Good Signal Icon -->
+                <ImageView
+                        android:id="@+id/good_gps_signal_icon"
+                        android:tint="@color/white"
+                        android:layout_width="50dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginEnd="10dp"
+                        app:srcCompat="@drawable/ic_gps_fixed"
+                        android:layout_weight="1"/>
+
+                <!-- Signal Status Text -->
+                <TextView
+                        android:id="@+id/good_gps_signal_text"
+                        android:text="@string/gps_status"
+                        style="@android:style/TextAppearance.Medium"
+                        android:textColor="@color/white"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:gravity="center_vertical"
+                        android:layout_gravity="center_vertical"
+                        android:layout_weight="1"/>
+
+            </LinearLayout>
+
+            <!-- NaturalNet Signal -->
+            <LinearLayout
+                    android:orientation="vertical"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginBottom="10dp">
+
+                <LinearLayout
+                        android:orientation="horizontal"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent">
+
+                    <!-- Good Signal Icon -->
+                    <ImageView
+                            android:id="@+id/good_net_signal_icon"
+                            android:tint="@color/white"
+                            android:layout_width="50dp"
+                            android:layout_height="wrap_content"
+                            android:layout_marginEnd="10dp"
+                            app:srcCompat="@drawable/ic_net_signal"
+                            android:layout_weight="1"/>
+
+                    <!-- Signal Status Text -->
+                    <TextView
+                            android:id="@+id/good_net_signal_text"
+                            android:text="@string/net_status"
+                            style="@android:style/TextAppearance.Medium"
+                            android:textColor="@color/white"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:gravity="center_vertical"
+                            android:layout_gravity="center_vertical"
+                            android:layout_weight="1"/>
+
+                </LinearLayout>
+
+                <!-- Signal Status Text -->
+                <TextView
+                        android:id="@+id/net_number_of_connections"
+                        android:text="@string/net_connections"
+                        style="@android:style/TextAppearance.Small"
+                        android:textColor="@color/white"
+                        android:layout_width="match_parent"
+                        android:layout_height="0dp"
+                        android:layout_marginStart="30dp"
+                        android:gravity="center_vertical"
+                        android:layout_gravity="center_vertical"
+                        android:layout_weight="1"/>
+
+            </LinearLayout>
+
         </LinearLayout>
     </LinearLayout>
 </FrameLayout>
