--- a/app/src/main/res/layout/warning_fragment.xml
+++ b/app/src/main/res/layout/warning_fragment.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
-              android:id="@+id/fragment_container"
-              android:background="@drawable/rounded_fragment"
-              android:backgroundTint="@color/green"
+              android:id="@+id/warning_fragment_container"
+              android:background="@drawable/green_rounded_fragment"
               android:clipToPadding="true"
               android:layout_width="match_parent"
               android:layout_height="70dp">
@@ -13,28 +12,53 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
         <LinearLayout
+                android:id="@+id/warning_title_layout"
                 android:orientation="horizontal"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
-            <!-- Status Icon -->
+            <!-- Good Status Icon -->
             <ImageView
-                    android:id="@+id/warningTick"
+                    android:id="@+id/warning_tick"
                     android:layout_width="10dp"
                     android:layout_height="35dp"
                     android:layout_gravity="center_vertical"
-                    android:tint="@color/white"
+                    android:tint="@android:color/white"
                     app:srcCompat="@drawable/ic_tick"
                     android:layout_weight="0.19"/>
 
-            <!-- Status Text-->
+            <!-- Warning Status Icon -->
+            <ImageView
+                    android:id="@+id/warning_icon"
+                    android:layout_width="10dp"
+                    android:layout_height="35dp"
+                    android:layout_gravity="center_vertical"
+                    android:tint="@android:color/white"
+                    android:visibility="gone"
+                    app:srcCompat="@drawable/ic_warning"
+                    android:layout_weight="0.19"/>
+
+            <!-- Good Status Text-->
             <TextView
-                    android:id="@+id/warningTitle"
+                    android:id="@+id/no_warning_title"
                     android:text="@string/no_warnings"
-                    android:textColor="@color/white"
+                    android:textColor="@android:color/white"
                     style="@android:style/TextAppearance.Large"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
+                    android:gravity="center_vertical"
+                    android:layout_gravity="center_vertical"
+                    android:layout_weight="1"/>
+
+            <!-- Warning Status Text-->
+            <TextView
+                    android:id="@+id/warning_title"
+                    android:text="@string/warning_received"
+                    android:textColor="@android:color/white"
+                    style="@android:style/TextAppearance.Large"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:visibility="gone"
                     android:gravity="center_vertical"
                     android:layout_gravity="center_vertical"
                     android:layout_weight="1"/>
