--- a/app/src/main/res/layout/network_fragment.xml
+++ b/app/src/main/res/layout/network_fragment.xml
@@ -85,18 +85,18 @@
 
                 <!-- Good Signal Icon -->
                 <ImageView
-                        android:id="@+id/good_cellular_signal_icon"
+                        android:id="@+id/cellular_signal_icon"
                         android:tint="@android:color/white"
                         android:layout_width="50dp"
                         android:layout_height="wrap_content"
                         android:layout_marginEnd="10dp"
-                        app:srcCompat="@drawable/ic_network_cell"
+                        android:src="@drawable/ic_network_cell"
                         android:layout_weight="1"/>
 
                 <!-- Signal Status Text -->
                 <TextView
-                        android:id="@+id/good_cellular_signal_text"
-                        android:text="@string/cellular_status"
+                        android:id="@+id/cellular_signal_text"
+                        android:text="@string/good_cellular_status"
                         style="@android:style/TextAppearance.Medium"
                         android:textColor="@android:color/white"
                         android:layout_width="match_parent"
