--- a/app/src/main/res/layout/network_fragment.xml
+++ b/app/src/main/res/layout/network_fragment.xml
@@ -90,13 +90,13 @@
                         android:layout_width="50dp"
                         android:layout_height="wrap_content"
                         android:layout_marginEnd="10dp"
-                        android:src="@drawable/ic_network_cell_great"
+                        android:src="@drawable/ic_network_cell_none"
                         android:layout_weight="1"/>
 
                 <!-- Signal Status Text -->
                 <TextView
                         android:id="@+id/cellular_signal_text"
-                        android:text="@string/cellular_status_good"
+                        android:text="@string/cellular_status_none"
                         style="@android:style/TextAppearance.Medium"
                         android:textColor="@android:color/white"
                         android:layout_width="match_parent"
@@ -121,13 +121,13 @@
                         android:layout_width="50dp"
                         android:layout_height="wrap_content"
                         android:layout_marginEnd="10dp"
-                        android:src="@drawable/ic_gps_fixed"
+                        android:src="@drawable/ic_gps_none"
                         android:layout_weight="1"/>
 
                 <!-- Signal Status Text -->
                 <TextView
                         android:id="@+id/gps_signal_text"
-                        android:text="@string/gps_status_good"
+                        android:text="@string/gps_status_none"
                         style="@android:style/TextAppearance.Medium"
                         android:textColor="@android:color/white"
                         android:layout_width="match_parent"
@@ -157,13 +157,13 @@
                             android:layout_width="50dp"
                             android:layout_height="wrap_content"
                             android:layout_marginEnd="10dp"
-                            android:src="@drawable/ic_net_signal_great"
+                            android:src="@drawable/ic_net_signal_none"
                             android:layout_weight="1"/>
 
                     <!-- Signal Status Text -->
                     <TextView
                             android:id="@+id/net_signal_text"
-                            android:text="@string/net_status_good"
+                            android:text="@string/net_status_none"
                             style="@android:style/TextAppearance.Medium"
                             android:textColor="@android:color/white"
                             android:layout_width="match_parent"
