--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,7 +5,7 @@
     <color name="colorAccent">@color/yellow</color>
 
     <color name="green">#7fc89b</color>
-    <color name="yellow">#f1d017</color>
+    <color name="yellow">#f1be17</color>
     <color name="orange">#E8973F</color>
     <color name="purple">#FF4D40</color>
 </resources>
